Fix webtiles scrollbar visibility and zoom issues
The purpose of these modifications is to make the scrollbar 'stick out'
from the side of the scroller window, so that it is flush with the edge
of the popup. Unfortunately, using a transform is not possible here due
to clipping.

This commit resolves some issues reported by users where the scrollbar
would not be immediately visible, and where the browser scrollbar would
reappear if the zoom level was changed.

--- a/crawl-ref/source/webserver/game_data/static/style.css
+++ b/crawl-ref/source/webserver/game_data/static/style.css
@@ -353,12 +353,13 @@ body {
 .simplebar-track {
     background: #040204;
 }
+.simplebar-track .simplebar-scrollbar::before,
 .simplebar-track.horizontal {
     display: none;
 }
 [data-simplebar="init"] {
-    margin-right: -20px; /* matched in scroller.js */
-    padding-right: 20px; /* matched in scroller.js */
+    margin-right: -20px; /* matched in simplebar.js */
+    padding-right: 20px; /* matched in simplebar.js */
 }
 .scroller-lhd {
     visibility: hidden;
